--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-scala</artifactId>
+      <version>11.0</version>
+      <type>pom</type>
+    </dependency>
 
 
     <!-- Test -->
