--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,7 @@
   <artifactId>crawler</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
-  <description>My wonderfull scala app</description>
   <inceptionYear>2018</inceptionYear>
-  <licenses>
-    <license>
-      <name>My License</name>
-      <url>http://....</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -56,6 +48,12 @@
       <version>11.0</version>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+
 
 
     <!-- Test -->
